--- a/bncms/admin/style-admin.css
+++ b/bncms/admin/style-admin.css
@@ -136,7 +136,7 @@ td {
     margin: 0px 0px 0px 0px;
     margin: 0px !important;
     min-width: 15px;
-    max-width: 220px;
+    max-width: 100%;
 }
 a, a:link, a:visited {
     font-family: Geneva, Arial, Helvetica, sans-serif;
